// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FormButton FormButton should render with default props 1`] = `
<FormButton
  classes={
    Object {
      "root": "pure-FormButton--root-1",
    }
  }
>
  __CHILDREN__
</FormButton>
`;

exports[`components/FormButton Render should render with additional button props 1`] = `
<WithStyles(Button)
  className="__ROOT__"
  color="primary"
  disableRipple={true}
  fullWidth={true}
  type="submit"
  variant="contained"
>
  __CHILDREN__
</WithStyles(Button)>
`;

exports[`components/FormButton Render should render with default props 1`] = `
<WithStyles(Button)
  className="__ROOT__"
  color="primary"
  fullWidth={true}
  type="submit"
  variant="contained"
>
  __CHILDREN__
</WithStyles(Button)>
`;
